# pytest-perfetto

./: .gitignore  README.md  pyproject.toml  pytest-notes.md  tox.ini
perfsephone/: __init__.py  fastapi.py  perfetto_renderer.py  plugin.py  profiler.py
src/pytest_perfetto/: __init__.py  perfetto_renderer.py  plugin.py
tests/: conftest.py  test_fastapi_integration.py  test_perfetto_renderer.py  test_plugin.py
