[tool.poetry]
name = "perfsephone"
version = "0.1.0"
description = ""
authors = ["Luca Muscat <lucamuscat@gmail.com>"]
readme = "README.md"

[project]
classifiers = [
    "Framework :: Pytest"
]
name = "perfsephone"

[tool.poetry.plugins."pytest11"]
"perfsephone" = "perfsephone.plugin"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.3"
pyinstrument = "^5.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8"
mypy = "^1.13.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "S",
    "B",
    "DTZ",
    "C4",
    "LOG",
    "SIM",
    "ARG",
    "PTH",
    "PL",
    "FLY",
    "PERF",
]
ignore = [
    "S101"
]

[tool.mypy]
strict = true
